# Futures-Arbitrage

./: package-lock.json  package.json
crossspread/MAKER/mcp-maker-server/: QUICK_SETUP.md  README.md  package-lock.json  package.json  tsconfig.json
crossspread/MAKER/mcp-maker-server/src/: index.ts  maker-core.ts  session-manager.ts  types.ts
crossspread/crossspread/: .env.example  README.md  jest.config.js  package-lock.json  package.json  speckit.checklist  speckit.constitution  speckit.plan  speckit.specify  speckit.tasks  start.sh  stop.sh  tsconfig.json
crossspread/crossspread/api-docs/: bitget_api_doc.md  bybit_api_doc.md  okx_api_doc.md
crossspread/crossspread/db/migrations/: init.sql
crossspread/crossspread/infra/: .env  .env.example  docker-compose.yml
crossspread/crossspread/infra/prometheus/: prometheus.yml
crossspread/crossspread/services/backend-api/: Dockerfile  package.json  tsconfig.json
crossspread/crossspread/services/execution-rust/: Cargo.toml  Dockerfile
crossspread/crossspread/services/execution-rust/src/: config.rs  crypto.rs  main.rs  order.rs  slicer.rs
crossspread/crossspread/services/execution-rust/src/exchange/: binance.rs  bingx.rs  bitget.rs  bybit.rs  coinex.rs  gateio.rs  htx.rs  kucoin.rs  lbank.rs  mexc.rs  mod.rs  okx.rs
crossspread/crossspread/services/md-ingest/: Dockerfile  go.mod  go.sum
crossspread/crossspread/services/sim-backtest/: Dockerfile  requirements.txt
crossspread/crossspread/tests/e2e/: simulation-flow.test.ts
crossspread/docs/: mexc_api_doc.md
(+158 files in other folders)
